--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 <version>7.8.1</version>
 </dependency> -->
 <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
-<dependency>
+<!-- <dependency>
 <groupId>io.cucumber</groupId>
 <artifactId>cucumber-junit</artifactId>
 <version>7.8.1</version>
@@ -97,7 +97,7 @@
 <version>7.6.0</version>
 <scope>test</scope>
 </dependency>
-<dependency>
+<dependency> -->
 		<groupId>org.testng</groupId>
 		<artifactId>testng</artifactId>
 		<version>7.0.0-beta1</version>
