--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,11 @@
 <artifactId>commons-io</artifactId>
 <version>2.11.0</version>
 </dependency>
-<!-- <dependency>
+ <dependency>
 <groupId>io.cucumber</groupId>
 <artifactId>cucumber-java</artifactId>
 <version>7.8.1</version>
-</dependency> -->
+</dependency>
 <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
 <!-- <dependency>
 <groupId>io.cucumber</groupId>
