--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 <version>7.8.1</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
-<!-- <dependency>
+ <dependency>
 <groupId>io.cucumber</groupId>
 <artifactId>cucumber-junit</artifactId>
 <version>7.8.1</version>
