--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 <version>7.6.0</version>
 <scope>test</scope>
 </dependency>
-<dependency> -->
+<dependency> 
 		<groupId>org.testng</groupId>
 		<artifactId>testng</artifactId>
 		<version>7.0.0-beta1</version>
