--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,9 @@
   <groupId>Cucumberbddframework</groupId>
   <artifactId>Cucumberbddframework</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-   <dependencies>
+  
+ <dependencies>
+
 <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
 <dependency>
 <groupId>io.cucumber</groupId>
@@ -36,17 +38,78 @@
 <artifactId>commons-io</artifactId>
 <version>2.11.0</version>
 </dependency>
+ <dependency>
+<groupId>io.cucumber</groupId>
+<artifactId>cucumber-java</artifactId>
+<version>7.8.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+ <dependency>
+<groupId>io.cucumber</groupId>
+<artifactId>cucumber-junit</artifactId>
+<version>7.8.1</version>
+<scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+<version>4.13.1</version>
+<scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+<groupId>org.seleniumhq.selenium</groupId>
+<artifactId>selenium-java</artifactId>
+<version>4.5.0</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+<groupId>commons-io</groupId>
+<artifactId>commons-io</artifactId>
+<version>2.11.0</version>
+</dependency>
+<dependency>
+<groupId>io.qameta.allure</groupId>
+<artifactId>allure-cucumber7-jvm</artifactId>
+<version>2.20.1</version>
+</dependency>
+<dependency>
+<groupId>org.seleniumhq.selenium</groupId>
+<artifactId>selenium-java</artifactId>
+<version>4.1.4</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>poi</artifactId>
+<version>5.2.3</version>
+</dependency>
+<dependency>
+<groupId>org.seleniumhq.selenium</groupId>
+<artifactId>selenium-java</artifactId>
+<version>3.141.59</version>
+</dependency>
+
 <dependency>
 <groupId>org.testng</groupId>
 <artifactId>testng</artifactId>
 <version>7.6.0</version>
 <scope>test</scope>
 </dependency>
+<dependency> -->
+		<groupId>org.testng</groupId>
+		<artifactId>testng</artifactId>
+		<version>7.0.0-beta1</version>
+		<scope>test</scope>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
     <version>5.3.2</version>
 </dependency>
+
 <!-- https://mvnrepository.com/artifact/com.github.stephenc.monte/monte-screen-recorder -->
 <dependency>
 <groupId>com.github.stephenc.monte</groupId>
